<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shm.dim.lab_5.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="7"
        android:columnCount="2"
        android:layout_gravity="center_horizontal" >

            <TextView
                android:id="@+id/textViewSex"
                style="@style/TextView"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/sex" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal" >
                    <RadioButton
                        android:id="@+id/radioButtonMan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/man" />
                    <RadioButton
                        android:id="@+id/radioButtonWoman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/woman" />
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:id="@+id/textViewWeight"
                style="@style/TextView"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/weight" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <EditText
                    android:id="@+id/etWeight"
                    style="@style/EditText"
                    android:inputType="number" />
                <TextView
                    android:id="@+id/textViewKg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_units" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewHeight"
                style="@style/TextView"
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/height" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <EditText
                    android:id="@+id/etHeight"
                    style="@style/EditText"
                    android:inputType="number" />
                <TextView
                    android:id="@+id/textViewSm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height_units" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewAge"
                style="@style/TextView"
                android:layout_row="3"
                android:layout_column="0"
                android:text="@string/age" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <EditText
                    android:id="@+id/etAge"
                    style="@style/EditText"
                    android:inputType="number" />
                <TextView
                    android:id="@+id/textViewYears"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_units" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewActivityLevel"
                style="@style/TextView"
                android:layout_row="4"
                android:layout_column="0"
                android:text="@string/activity_level" />
            <Spinner
                android:id="@+id/spinner"
                android:entries="@array/activity_level"
                android:layout_width="130dp"
                android:layout_height="45dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="1"
                android:orientation="vertical" >
                <TextView
                    style="@style/TextViewResult"
                    android:id="@+id/textView"
                    android:text="@string/result" />
                <TextView
                    style="@style/TextViewResult"
                    android:id="@+id/tvResults" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonPrintResults"
                style="@style/Button"
                android:layout_row="6"
                android:layout_column="1"
                android:onClick="onClickCalculateResults"
                android:text="@string/calculate" />

        </GridLayout>

    </ScrollView>

</RelativeLayout>